<resources>
    <string name="app_name">Project management</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="avatar">avatar</string>
    <string name="new_employee">New Employee?</string>
    <string name="sign_up">Sign up!</string>
    <string name="manager_uh">MANAGER UH?</string>
    <string name="Open" />
    <string name="Close" />
    <string name="Employees">Employees</string>
    <string name="menu_settings">Settings</string>
    <string name="str_btn_chart">Pie Chart</string>
    <string name="Projects">Projects</string>
    <string name="Manage">Manage</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="home">Home</string>
    <string name="Home">Home</string>
    <string name="view_database">View Database</string>
    <string name="view_status">view_status</string>
    <string name="admin_module">Admin Module</string>
    <string name="Admin">Admin</string>
    <string name="HelloAdmin">Hello Admin</string>
    <string name="hello_admin">Hello Admin</string>
    <string name="menu_projects">menu_projects</string>
    <string name="menu_employees">menu_employees</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="team_name">Team Name</string>
    <string name="team_leader">Team Leader</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="radiobutton">RadioButton</string>
    <string name="designation1">Designation!!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="team_leader1">Team Leader!!</string>
    <string name="addbtn">ADD</string>
    <string name="edit">Edit</string>
    <string name="todo">TODO</string>
    <string name="pid">pid</string>
    <string name="task1_name">task1_name</string>
    <string name="username">Username</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="enter_task1">Enter Task1!!</string>
    <string name="enter_task2">Enter Task2!!</string>
    <string name="enter_task3">Enter Task3!!</string>
    <string name="email_id">Email id</string>
    <string name="mobile_no">Mobile no</string>
    <string name="img">img</string>
    <string-array name="designation">
        <item>Manager</item>
        <item>Sr.Executive</item>
        <item>Security Manager</item>
        <item>Sr.Recruiter</item>
    </string-array>
</resources>
